--- a/src/App.css
+++ b/src/App.css
@@ -94,3 +94,10 @@
     padding-top: 25px;
   }
 }
+
+
+/* --------------- footer ------------- */
+
+.footer{
+  background-color: rgb(7, 145, 127);
+}
